--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.1.6",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
@@ -24,7 +25,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
-    "sweetalert2": "^11.15.10",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
