--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
